--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <html>
     <head>
         <title>
-            测试
+            test
         </title>
     </head>
     <body>
-        <div id="btn">hello world</div>
+        <p>test</p>
     </body>
-
-    <script type="text/javascript" src="js/zepto.js"></script>
-    <script type="text/javascript" src="js/touch.js"></script>
-    <script type="text/javascript">
-    $(function(){
-        $('#btn').on('touchstart',function(){
-            alert('hello zepto');
-        });
-    });
-    </script>
 </html>
